# anglican-search-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
deploy/: Caddyfile  README.md  SERVE.md  SETUP.md  entrypoint.sh  gpu_setup_arc.sh  serve_setup.sh
deploy/docker/: README.md
deploy/docker/home/: .env.example  Dockerfile.serve  docker-compose.yml
deploy/docker/home/data/: .gitkeep
deploy/docker/home/wireguard/: wg0.conf.example
deploy/docker/vps/: .env.example  Caddyfile  docker-compose.yml
deploy/docker/vps/wireguard/: wg0.conf.example
deploy/k8s/: embed-job.yaml  pvc.yaml
deploy/systemd/: anglican-mcp.service  bilson-ai.service
docs/: add-church-fathers.md  research-prompt.md
notebooks/: build_index_cuda.ipynb  embed_on_pcai.ipynb
sample_data/: 01911_-_Waterland__Daniel_-_Importance_of_the_Doctrine_of_the_Holy_Trinity_Asserted.md  01912_-_Vogan__Thomas_-_The_Principal_Objections_Against_the_Doctrine_of_the_Trinity__and_a_Portion_of_the_Evidenc.md  01914_-_Scott__John_-_The_Holy_Scriptural_Doctrine_of_the_Divine_Trinity.md
scripts/: check_env.py  ingest_ccel_fathers.py  inspect_chunks.py  repair_db.py  slim_db.py  test_mcp_client.py
src/anglican_search/: __init__.py  batch.py  chunk.py  clean.py  config.py  device.py  download.py  embed_library.py  enrich_ia.py  longs.py  mcp_tool.py  parse.py  pipeline.py  search.py  server.py
src/bilson_ai/: __init__.py  accounts.py  admin.py  app.py  config.py  db.py  importer.py  mcp_app.py  oauth.py  submissions.py
src/bilson_ai/static/: style.css
src/bilson_ai/templates/: admin.html  base.html  book.html  consent.html  dashboard.html  docs.html  index.html  legal.html  library.html  login.html  queue.html  search.html  signup.html  submission.html  submit.html
tests/: test_ccel_ingest.py  test_device.py  test_oauth.py
