[project]
name = "anglican-search"
version = "0.1.0"
description = "Local semantic search over a personal Anglican theological library (FAISS + MCP)."
requires-python = ">=3.12,<3.13"
dependencies = [
    # GPU embeddings — torch must be the cu128 build for Blackwell (sm_120).
    "torch>=2.7",
    "sentence-transformers>=3.0",
    # CPU FAISS is the right call on Windows (no GPU wheels) and plenty fast here.
    "faiss-cpu>=1.8",
    # Official Python MCP SDK for the search server.
    "mcp>=1.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyspellchecker>=0.9.0",
]

[project.scripts]
anglican-search-mcp = "anglican_search.server:main"
bilson-ai = "bilson_ai.app:main"

[project.optional-dependencies]
# Bilson AI web service (installed on the serving host, not the embed image).
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]
# Gate-test lane (deterministic, fast, no GPU/network). Run: uv run pytest
dev = [
    "pytest>=8",
]
# Corpus ingest helpers (e.g. the Schaff Church Fathers from CCEL ThML).
ingest = [
    "lxml>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anglican_search", "src/bilson_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# torch backends. `uv sync` uses the default below (Nvidia cu128, Blackwell).
# For other hardware, install torch from the matching index instead of syncing
# torch from cu128 (the engine auto-detects the device at runtime — see
# anglican_search/device.py):
#   Intel Arc (XPU):  uv pip install torch --index-url https://download.pytorch.org/whl/xpu
#                     (or run deploy/gpu_setup_arc.sh)
#   CPU-only serve:   uv pip install torch --index-url https://download.pytorch.org/whl/cpu
#                     (or run deploy/serve_setup.sh)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Intel Arc / Data Center GPU wheels (used by deploy/gpu_setup_arc.sh).
[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
# Default for `uv sync`: the Nvidia build. Arc/CPU boxes install torch
# explicitly from their index (above) and do not sync torch from here.
torch = { index = "pytorch-cu128" }
